--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,4 +1,4 @@
-<ion-content class="login-content">
+<ion-content class="login-content" [scrollY]="false">
   <div class="login-container">
     
     <!-- Área de Logo/Header -->
@@ -6,7 +6,7 @@
       <div class="logo-circle">
         <ion-icon name="leaf" class="logo-icon"></ion-icon>
       </div>
-      <h1 class="app-title">PragasCana</h1>
+      <h1 class="app-title">Xô Praga!</h1>
       <p class="app-subtitle">Monitoramento de Pragas</p>
     </div>
 
