--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -1,4 +1,4 @@
-<ion-content [fullscreen]="true" class="dashboard-content">
+<ion-content [fullscreen]="true" class="dashboard-content" [scrollY]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Dashboard</ion-title>
