Algumas mudanças já foram feitas

--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,4 +1,4 @@
-<ion-content class="login-content" [scrollY]="false">
+<ion-content class="login-content" [scrollY]="false" [scrollX]="false">
   <div class="login-container">
     
     <!-- Área de Logo/Header -->
