--- a/src/global.scss
+++ b/src/global.scss
@@ -506,3 +506,16 @@
     }
   }
 }
+/* ============================================
+   ESTILOS CUSTOMIZADOS PARA MODAL DE VISTORIA
+   ============================================ */
+
+.vistoria-modal {
+  --width: 100%;
+  --height: 100%;
+  --border-radius: 0;
+
+  .ion-page {
+    border-radius: 0 !important;
+  }
+}
